# iit-doc-chat

./: .gitignore  README.md  pyproject.toml  requirements.txt  results_20260418_141725.json  traceback.txt
app/: api.py  cli.py  concepts.py  concepts.yaml  config.py  embeddings.py  followup.py  ingest.py  intent.py  llm.py  preprocess_llm.py  prompting.py  qdrant_store.py  qud_drift.py  retrieval.py  rework.py  schemas.py  session_state.py  synthesis.py  synthesis_types.py
app/static/: index.html
docs/IIT-lokala regler och rutiner/Forskarutbildning/: Checklist related to Disputation_(20250603).docx
docs/IIT-lokala regler och rutiner/Handläggningsordning inför beslut/: Intern handläggningsordning inför beslut.docx
docs/IIT-lokala regler och rutiner/Uppdrag i tjänst/: Programansvar tid i uppdrag(underlag till beslut20250923).docx
docs/IIT-lokala-regler-och-rutiner/Forskarutbildning/: Anmälan halvtidsseminarium.docx  Calculation time in doctoral studies and employment.xlsx  Checklist related to Licentiate seminar_(20250603).docx
scripts/: ingest_docs.py  inspect_chunks.py  start_server.py  synthesis_experiment.py
test/: questions.json
